--- a/bioSite pages/biosite css.css
+++ b/bioSite pages/biosite css.css
@@ -59,11 +59,52 @@ p {
 
 
 .navigation {
-    margin: 100px 50px 100px 50px;
+    margin: 50px 50px 50px 50px;
     display: flex;
     justify-content: center;
 
 }
+
+.column2of3 {
+    width: 300px;
+    float: left;
+    margin: 200px 50px 200px 50px;
+
+
+}
+
+.column1of3, .column3of3 {
+    width: 300px;
+    float: left;
+    margin: 100px 50px 100px 50px;
+
+}
+
+
+#quote {
+    font-family: Niconne;
+    margin: 100px 100px 100px 100px;
+    font-size: 50px;
+    font-weight: normal;
+    text-align: center;
+    color: #613700
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 .hovertext {
